Fixed hot campaigns on tablets

--- a/client/sass/home.sass
+++ b/client/sass/home.sass
@@ -146,7 +146,7 @@ div.landing-page
     margin-bottom: 2em
     margin-top: 1em
     width: 100%
-    @media screen and (min-width: $tablet-computer-boundary)
+    @media screen and (min-width: $phone-tablet-boundary)
       width: 48%
     div.campaign-preview.wrapper
       width: 100%
